Bug: Fix overflow bug

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   color: orange;
   height: 100vh;
+  overflow: hidden;
 }
 
 .invisible-div {
