--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -9,7 +9,7 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 0;
   margin: 0;
 }
